0.08000 2009-08-27
    - Ported get_authentication_url from Net::Twitter
    - Work around perl bug requiring encoded hash keys when client uses "use utf8"

0.07000 2009-08-14
    - Removed JSON::DWIW as a handler (no support for JSON::Any's utf8 option)

0.06002 2009-07-29
    - Fix: spurious OAuth signature failures (ported from Net::Twitter)

0.06001 2009-07-28
    - Fix: OAuth / unicode conflict

0.06000 2009-07-28
    - Bug fix: OAuth signatures on POST requests (Galen Huntington)
    - Unicode fixes

0.05000 2009-07-09
    - Added ssl and netrc arguments to new

0.04001 2009-07-07
    - Added documentation for the required callback param to
      get_authorization_url
    - New nonce algorithm to eliminate potential duplicates on forked
      processes

0.04000 2009-06-27
    - Added support for the "authenticate" parameter to API methods

    - Twitter API update:
        - Added screen_name and user_id parameters to new_direct_message
        - Added show_friendship method (friendships/show.json)

0.03001 2009-06-20
    - Fixed Basic Auth regression error

0.03000 2009-06-20
    - Added OAuth 1.0a support
    - Added examples using OAuth

0.02002 2009-06-11
    - Reverted the 'forceauth' feature; it requires too recent LWP::UserAgent

0.02000 2009-06-07
    - Added support for the saved_searches API methods

0.01001 2009-06-06
    - Fixed: accept extra args as a hashref (search behaved this way in 2.12)

0.01000 2009-06-06
    - non-Moose variation of Net::Twitter