@@ -25,6 +25,7 @@ requires:
   Encode: 0
   JSON::Any: 1.21
   LWP::UserAgent: 2.032
+  URI: 1.4
   URI::Escape: 0
   perl: 5.005
 resources:
@@ -32,4 +33,4 @@ resources:
   homepage: http://github.com/semifor/Net-Twitter-Lite
   license: http://dev.perl.org/licenses/
   repository: git://github.com/semifor/net-twitter-lite.git
-version: 0.08000
+version: 0.08001
