@@ -2,7 +2,7 @@ NAME
     Net::Twitter::Lite - A perl interface to the Twitter API
 
 VERSION
-    This document describes Net::Twitter::Lite version 0.08000
+    This document describes Net::Twitter::Lite version 0.08001
 
 SYNOPSIS
       use Net::Twitter::Lite;
@@ -242,7 +242,7 @@ METHODS AND ARGUMENTS
 
         useragent
             The value for "User-Agent" HTTP header. It defaults to
-            "Net::Twitter::Lite/0.08000 (Perl)".
+            "Net::Twitter::Lite/0.08001 (Perl)".
 
         source
             The value used in the "source" parameter of API method calls. It
@@ -1116,7 +1116,7 @@ AUTHENTICATION
           $nt->access_token_secret($access_token_secret);
       }
 
-      unless ( $nt->is_authorized ) {
+      unless ( $nt->authorized ) {
           # The client is not yet authorized: Do it now
           print "Authorize this app at ", $nt->get_authorization_url, " and enter the PIN#\n";
 
