@@ -1,3 +1,5 @@
+    - Removed deprecated is_authorized from examples in pod (thanks to Nigel Metheringham)
+
 0.08000 2009-08-27
     - Ported get_authentication_url from Net::Twitter
     - Work around perl bug requiring encoded hash keys when client uses "use utf8"
